<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>casadi_vendor</name>
  <version>3.6.7</version>
  <description>TODO: Package description</description>
  <maintainer email="rin@eyrin.jp">rin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gfortran</build_depend>

  <depend>liblapack-dev</depend>
  <depend>coinor-libipopt-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
